--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "omnipay/dotpay",
+    "name": "ptuchik/omnipay-dotpay",
     "type": "library",
     "description": "Dotpay driver for the Omnipay payment processing library",
     "keywords": [
