--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,12 @@ php:
   - 7.1
   - 7.2
 
+sudo: false
+
+cache:
+  directories:
+    - $HOME/.composer/cache
+
 before_script:
   - composer install -n --dev --prefer-source
 
